Finalising the notebook

--- a/data_viz_task.ipynb
+++ b/data_viz_task.ipynb
@@ -5,14 +5,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data visualisation task "
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**Additional information**  \n",
     "[Cars93 metadata](https://jse.amstat.org/v1n1/datasets.lock.html) "
    ]
@@ -115,25 +107,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Boxplot question:**  \n",
-    "Which of these manufacturers has the car with the highest revs per mile?\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Boxplot answer:**\n",
-    "\n",
-    "Toyota has the car with the highest revs per mile."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 2. Histogram"
    ]
   },
@@ -174,16 +147,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Histogram question:**  \n",
-    "Is it generally more fuel efficient to drive in the city or on the highway?"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Histogram answer:**\n",
     "It is generally more fuel efficiennt to drive on the highway as the MPGs are higher, meaning the cars consume less fuel and can drive longer distances"
    ]
   },
@@ -236,16 +199,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Lineplot question:**  \n",
-    "What is this relationship? What happens when the wheelbase gets larger?\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Lineplot answer:**  \n",
     "There is a positive correlation between wheelbase and turning circle, in other words as the wheelbase gets larger, the turning circle increases as well.\n",
     "Although there's not a consistent behavior shown in line plot, but the regression plot explains that on average with the increase in the wheelbase, the turning circle surges as well."
    ]
@@ -308,18 +261,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Barplot question:**  \n",
-    "Does a larger car mean more horsepower?\n",
-    "\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Barplot answer:**\n",
-    "Yes, the larger car means more horsepower on average."
+    "The larger car means more horsepower on average."
    ]
   }
  ],
